--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,41 +30,23 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/et_from"
+                    android:id="@+id/et_total"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:inputType="textPersonName"
-                    android:text="@string/from" />
-
+                    android:hint="@string/total" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/km" />
 
-                <EditText
-                    android:id="@+id/et_to"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:inputType="textPersonName"
-                    android:text="@string/to" />
-
-                <TextView
+                <Spinner
+                    android:id="@+id/spinner"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/km" />
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
-
-            <EditText
-                android:id="@+id/et_total"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/spacing_large"
-                android:layout_marginRight="@dimen/spacing_large"
-                android:inputType="textPersonName"
-                android:text="@string/total" />
 
             <Button
                 android:id="@+id/btn_add"
@@ -108,5 +90,6 @@
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
+
 
 </LinearLayout>
