--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     android:hint="@string/total" />
                 <TextView
                     android:layout_width="wrap_content"
