--- a/app/src/main/res/layout/content_modify_record.xml
+++ b/app/src/main/res/layout/content_modify_record.xml
@@ -36,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:hint="@string/total"
-                    android:inputType="textPersonName" />
+                    android:inputType="number" />
 
                 <TextView
                     android:layout_width="wrap_content"
