--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,7 +10,7 @@
               android:paddingLeft="@dimen/activity_horizontal_margin"
               android:paddingRight="@dimen/activity_horizontal_margin"
               android:paddingTop="@dimen/activity_vertical_margin"
-              tools:context="io.github.edwinvanrooij.trackmyfuel.MainActivity">
+              tools:context="io.github.edwinvanrooij.trackmyfuel.util.MainActivity">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
