--- a/app/src/main/res/layout/fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_bill.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="io.github.edwinvanrooij.trackmyfuel.ui.BillFragment">
 
     <android.support.v7.widget.CardView
@@ -15,6 +14,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btn_reset"
+                style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
+                android:layout_width="match_parent"
+                android:background="@android:color/holo_red_light"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/spacing_large"
+                android:text="@string/reset" />
 
             <LinearLayout
                 android:layout_width="match_parent"
