--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -15,6 +15,55 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvPaid"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/spacing_large"
+                    android:layout_marginStart="@dimen/spacing_large"
+                    android:layout_marginTop="@dimen/spacing_large"
+                    android:layout_weight="0.3"
+                    android:text="@string/paid"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+                <EditText
+                    android:id="@+id/total"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing_large"
+                    android:layout_weight="0.3"
+                    android:ems="10"
+                    android:hint="@string/hint_paid"
+                    android:inputType="numberDecimal" />
+
+                <Button
+                    android:id="@+id/btn_ok"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/spacing_large"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_marginTop="@dimen/spacing_large"
+                    android:layout_weight="0.3"
+                    android:text="@string/ok" />
+
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_add"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/spacing_large"
+                android:layout_marginStart="@dimen/spacing_large"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_marginTop="@dimen/spacing_large"
+                android:text="@string/add" />
+
             <ListView
                 android:id="@+id/listview"
                 android:layout_width="match_parent"
@@ -22,9 +71,9 @@
                 android:layout_margin="@dimen/spacing_large">
 
             </ListView>
-
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
 </FrameLayout>
+
